[tool.poetry]
name = "jiraless"
version = "0.1.0"
description = "task management without jira"
authors = ["humphrey <ahnsv@bc.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6.2,<3.10"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.12b0"
mypy = "^0.931"
types-requests = "^2.27.6"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
