[tool.poetry]
name = "jiraless"
version = "0.1.0"
description = "task management without jira"
authors = ["humphrey <ahnsv@bc.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6.2,<3.9"
requests = "^2.27.1"
py-bus = "^0.2.0"
redis = "^4.1.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.12b0"
mypy = "^0.931"
types-requests = "^2.27.6"
pytest-dotenv = "^0.5.2"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
env_files = [
    ".env.test",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
